[tool.poetry]
name = "pyOPENDART"
version = "0.1.0"
description = "전자공시 DART Python API"
authors = ["Seonghyeon Kim <self@seonghyeon.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.1"
requests = "^2.25.1"
furl = "^2.1.0"
python-dateutil = "^2.8.1"
pandas = "^1.2.1"
notebook = {version = "^6.2.0", optional = true}
xmltodict = "^0.12.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"
notebook = "^6.2.0"

[tool.black]
line-length = 120
target_version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs         # exclude a few common directories in the
  | \.git          # root of the project
  | \.hg
  | \.mypy_cache
  | \.tox
  | buck-out
  | build
  | dist
  | tests
)/
'''


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
